--- a/MoinMoin/themes/modernized/static/css/stylus/main.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/main.styl
@@ -57,6 +57,7 @@ ins
 .moin-integer
     text-align right
     padding-right 1em
+    width 2%
 
 .moin-inline-label
     display inline
@@ -211,9 +212,6 @@ pre.comment
 
 pre.comment:before
     content url(../img/attention.png)
-
-.monospaced
-    font-family monospace
 
 table
     margin 1%
@@ -660,9 +658,6 @@ p.searchhint
 
 .moin-history-copy:before
     content url('../img/moin-new.png')
-
-.moin-integer
-    width 2%
 
 .moin-history-links
     width 5%
